# momentum

./: .gitignore  404.html  AGENTS.md  CHANGELOG.md  CMakeLists.txt  README.md  index.html  lunr-index-1743952856198.json  lunr-index-1744126858629.json  lunr-index-1744270902733.json  lunr-index-1744696591893.json  lunr-index-1745269155294.json  lunr-index-1745279267307.json  lunr-index-1745289707241.json  lunr-index-1745449263388.json  lunr-index-1745548643285.json  lunr-index-1746651496987.json  lunr-index-1746851574581.json  lunr-index-1747201074635.json  lunr-index-1747873582047.json  lunr-index-1748020835440.json  lunr-index-1748562448161.json  lunr-index-1748987230588.json  lunr-index-1749130575465.json  lunr-index-1749232889493.json  lunr-index-1749476454852.json  lunr-index-1749661865421.json  lunr-index-1749772698040.json  lunr-index-1749792088251.json  lunr-index-1749795993512.json  lunr-index-1749834093109.json  lunr-index-1749845573218.json  lunr-index-1749849269095.json  lunr-index-1750120194619.json  lunr-index-1750719588248.json  lunr-index-1751406309108.json  lunr-index-1752007707499.json  lunr-index-1752182861841.json  lunr-index-1752254390430.json  lunr-index-1752286228606.json  (+733 more)
.github/ISSUE_TEMPLATE/: build.yml
.github/workflows/: build_wheels_cibuildwheel.yml  ci_macos.yml  ci_runners_probe.yml  ci_ubuntu.yml  ci_windows.yml  cibuildwheel.yml  delete_merged_branch.yml  nightly.yml  nightly_debug.yml  publish_to_ghe.yml  publish_to_pypi.yml  publish_website.yml  update_lockfiles.yml  weekly.yml
_src/04_developer_guide/: 02_style_guide.md
assets/: README.md
assets/css/: styles.cdd401ab.css
assets/js/: 06a69bc0.32015ff0.js  06a69bc0.39aa2eb7.js  08ddbfd5.b7d3e02d.js  08ddbfd5.d9e21ea5.js  0ce400e6.292d3c7a.js  0ce400e6.41a85dd0.js  0ce400e6.956e139e.js  0ce400e6.aab64c6d.js  0ce400e6.be25165c.js  1280.9a788272.js  1280.ba3af10a.js  1280.fb25830e.js  1424.2212a8c6.js  1424.55b7c768.js  1424.d03c3a4f.js  1424.f64db565.js  1454.3ec76ebd.js  1454.e033d10d.js  1487.29477d93.js  1487.8d1d93d2.js  1487.999bbe77.js  1522.40b0814b.js  165.a0cdd940.js  165.f1e2056c.js  17896441.df1b1568.js  17896441.e1741fa9.js  181.7990faae.js  192c46b3.5bf103b0.js  2068.9f0211c0.js  2130.750db875.js  2237.85f2bce2.js  2334.b77cc5a2.js  2334.dfdfed30.js  2334.ec84ac30.js  2498.4e30c382.js  250.7836032a.js  2651.272874d0.js  2716.06e3ad7c.js  2716.af0cd392.js  2ed5b7da.6f6dfd44.js  (+552 more)
axel/: CMakeLists.txt  axel-config.cmake.in
axel/axel/: BoundingBox.cpp  DualContouring.cpp  KdTree.h  MeshToSdf.cpp  MeshToSdf.h  SignedDistanceField.cpp  SignedDistanceField.h  SignedDistanceFieldIO.cpp  SignedDistanceFieldIO.h  SimdKdTree.cpp  TriBvh.cpp  TriBvh.h
cmake/: build_variables.bzl  momentum-config.cmake.in  mt_defs.cmake
doxygen/: acceleration__sequence__error__function_8cpp.html  acceleration__sequence__error__function_8cpp_source.html  acceleration__sequence__error__function_8h.html  acceleration__sequence__error__function_8h_source.html  accessor__utils_8h.html  accessor__utils_8h.js  accessor__utils_8h_source.html  aim__error__function_8cpp.html  aim__error__function_8cpp_source.html  aim__error__function_8h.html  aim__error__function_8h.js  aim__error__function_8h_source.html  aligned_8h.html  aligned_8h.js  aligned_8h_source.html  annotated.html  annotated_dup.js  app__utils_8cpp.html  app__utils_8cpp.js  app__utils_8cpp_source.html  app__utils_8h.html  app__utils_8h.js  app__utils_8h_source.html  blend__shape_8cpp.html  blend__shape_8cpp_source.html  blend__shape_8h.html  blend__shape_8h.js  blend__shape_8h_source.html  blend__shape__base_8cpp.html  blend__shape__base_8cpp_source.html  blend__shape__base_8h.html  blend__shape__base_8h.js  blend__shape__base_8h_source.html  blend__shape__io_8cpp.html  blend__shape__io_8cpp.js  blend__shape__io_8cpp_source.html  blend__shape__io_8h.html  blend__shape__io_8h.js  blend__shape__io_8h_source.html  blend__shape__skinning_8cpp.html  (+1932 more)
doxygen/search/: all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_2.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  (+103 more)
markdown-page/: index.html
momentum/: Doxyfile  gen_fwd.py  gen_fwd_input.toml
momentum/camera/: camera.cpp  camera.h  fwd.h  projection_utils.cpp  projection_utils.h
momentum/character/: blend_shape.cpp  blend_shape.h  blend_shape_base.cpp  blend_shape_base.h  blend_shape_skinning.cpp  blend_shape_skinning.h  character.cpp  character.h  character_state.cpp  character_state.h  character_utility.cpp  character_utility.h  collision_geometry.h  collision_geometry_state.cpp  collision_geometry_state.h  fwd.h  inverse_parameter_transform.cpp  inverse_parameter_transform.h  joint.h  joint_state.cpp  joint_state.h  linear_skinning.cpp  linear_skinning.h  locator.h  locator_state.cpp  locator_state.h  marker.h  mesh_state.cpp  mesh_state.h  parameter_limits.cpp  parameter_limits.h  parameter_transform.cpp  parameter_transform.h  skeleton.h  (+14 more)
momentum/examples/ik_urdf/: CMakeLists.txt  using_character_solver_error_function.cpp  using_diff_error_function.cpp
momentum/examples/ik_urdf/urdf/: fr3_no_gripper.urdf
pymomentum/: CMakeLists.txt  __init__.py  gpu_character.py  quaternion.py  quaternion_np.py  rerun_vis.py  skel_state.py  skel_state_np.py  trs.py  viser_vis.py
python_api_doc/: axel.html  backend.html  genindex.html  geometry.html  gpu_character.html  index.html  marker_tracking.html  objects.inv  py-modindex.html  quaternion.html  renderer.html  search.html  searchindex.js  skel_state.html  solver.html  solver2.html  torch.html  trs.html
scripts/: build_pypi_wheel.py  detect_container_engine.sh  download_test_assets.py  generate_pyproject.py  info.sh  repair_macos_wheel.py  run_test.py  setup_msvc_env.py  test_wheel.py
(+779 files in other folders)
