[build-system]
requires = ["scikit-build-core", "pybind11", "setuptools-scm"]
build-backend = "scikit_build_core.build"

[project]
name = "pymomentum-cpu"
dynamic = ["version"]
description = "A library providing foundational algorithms for human kinematic motion and numerical optimization solvers to apply human motion in various applications (CPU-only version for Linux, macOS Intel, and macOS ARM)"
readme = "README.md"
requires-python = ">=3.12,<3.13"
authors = [
    { name = "Meta Reality Labs Research", email = "jeongseok@meta.com" },
]
license = { text = "MIT" }
keywords = [
    "kinematics",
    "motion",
    "optimization",
    "human-motion",
    "inverse-kinematics",
    "forward-kinematics",
    "body-tracking",
    "motion-capture",
    "character-animation",
    "robotics",
    "cpu",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    # PyTorch version constraints - platform and Python version specific
    # Linux: Support latest PyTorch with CUDA
    # macOS: Limited to older PyTorch versions (CPU only)
    # CPU package for Linux and macOS ARM64 (Apple Silicon only - Intel Macs not supported)
    # Linux uses latest PyTorch
    "torch>=2.8.0,<2.9; platform_system == 'Linux' and python_version == '3.12'",
    "torch>=2.8.0,<2.9; platform_system == 'Linux' and python_version == '3.13'",
    # macOS ARM64 (Apple Silicon) - PyTorch 2.8+ available
    "torch>=2.8.0,<2.9; platform_system == 'Darwin' and platform_machine == 'arm64' and python_version == '3.12'",
    "torch>=2.8.0,<2.9; platform_system == 'Darwin' and platform_machine == 'arm64' and python_version == '3.13'",
]

[project.urls]
Homepage = "https://github.com/facebookresearch/momentum"
Documentation = "https://facebookresearch.github.io/momentum/"
Repository = "https://github.com/facebookresearch/momentum"
"Bug Tracker" = "https://github.com/facebookresearch/momentum/issues"
Changelog = "https://github.com/facebookresearch/momentum/releases"

[tool.scikit-build]
build-dir = "build/{wheel_tag}"
cmake.args = [
    "-DBUILD_SHARED_LIBS=OFF",
    "-DMOMENTUM_BUILD_PYMOMENTUM=ON",
    "-DMOMENTUM_BUILD_EXAMPLES=OFF",
    "-DMOMENTUM_BUILD_TESTING=OFF",
    "-DMOMENTUM_BUILD_RENDERER=OFF",
    "-DMOMENTUM_ENABLE_SIMD=OFF",
    "-DCMAKE_CXX_SCAN_FOR_MODULES=OFF",
]
minimum-version = "0.10"
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
sdist.exclude = [
    ".github/",
    ".pixi/",
    "build/",
    "dist/",
    "*.lock",
]
wheel.exclude = ["geometry_test_helper.*"]

[[tool.scikit-build.overrides]]
if.platform-system = "^darwin"
cmake.args = [
    "-DBUILD_SHARED_LIBS=OFF",
    "-DMOMENTUM_BUILD_PYMOMENTUM=ON",
    "-DMOMENTUM_BUILD_EXAMPLES=OFF",
    "-DMOMENTUM_BUILD_TESTING=OFF",
    "-DMOMENTUM_BUILD_RENDERER=OFF",
    "-DMOMENTUM_ENABLE_SIMD=OFF",
    "-DCMAKE_CXX_SCAN_FOR_MODULES=OFF",
]


[[tool.scikit-build.overrides]]
if.platform-system = "^win32"
cmake.args = [
    "-DBUILD_SHARED_LIBS=OFF",
    "-G Visual Studio 17 2022",
    "-DMOMENTUM_BUILD_PYMOMENTUM=ON",
    "-DMOMENTUM_BUILD_EXAMPLES=OFF",
    "-DMOMENTUM_BUILD_TESTING=OFF",
    "-DMOMENTUM_BUILD_RENDERER=OFF",
    "-DMOMENTUM_ENABLE_SIMD=OFF",
    "-DCMAKE_CXX_SCAN_FOR_MODULES=OFF",
]

[tool.setuptools_scm]
# Automatically determine version from git tags
# Tags should follow the pattern: v1.2.3
# Will generate versions like: 1.2.3 (on tag), 1.2.4.post12 (between tags)
version_scheme = "post-release"
local_scheme = "no-local-version"
version_file = "pymomentum/_version.py"

[tool.cibuildwheel]
# Build for CPython 3.12 and 3.13 only
build = "cp312-* cp313-*"

# Skip PyPy, musllinux, and 32-bit builds
skip = "pp* *-musllinux_* *-win32 *-manylinux_i686"

# Use manylinux_2_28 for Colab compatibility (glibc 2.28+)
# This ensures wheels work on Ubuntu 20.04+, Colab, and most modern Linux
manylinux-x86_64-image = "manylinux_2_28"
manylinux-aarch64-image = "manylinux_2_28"

# Build dependencies needed inside the manylinux container
[tool.cibuildwheel.linux]
# Install system dependencies in manylinux container
before-all = [
    "yum install -y wget cmake ninja-build",
    # Install conda-forge dependencies via micromamba
    "wget -qO- https://micro.mamba.pm/api/micromamba/linux-64/latest | tar -xvj bin/micromamba",
    "./bin/micromamba create -y -n build -c conda-forge",
    "./bin/micromamba install -y -n build -c conda-forge 'libboost-devel>=1.84' 'ceres-solver>=2.2' 'cli11>=2.5' 'dispenso>=1.4' 'eigen>=3.4' 'ezc3d>=1.5' 'drjit-cpp>=1.2' 'fmt>=11' 'fx-gltf>=2' 'indicators>=2.3' 'kokkos>=4.6' 'librerun-sdk>=0.23' 'ms-gsl>=4' 'nlohmann_json>=3.12' 'openfbx>=0.9' 'openusd>=25' 're2>=2025' 'spdlog>=1.15' 'tracy-profiler-client>=0.12' 'urdfdom>=4' 'zlib>=1.3'",
]

# Build command that uses conda environment
build-frontend = "build"
environment = { CMAKE_PREFIX_PATH="/opt/_internal/micromamba/envs/build" }

# Test the wheel after building
test-requires = ["pytest", "numpy", "scipy"]
test-command = "pytest {project}/pymomentum/test/*.py"

[tool.cibuildwheel.macos]
# macOS doesn't need manylinux, uses delocate instead
archs = ["x86_64", "arm64"]

[tool.cibuildwheel.windows]
# Windows uses delvewheel for repair
archs = ["AMD64"]
