[build-system]
requires = ["scikit-build-core", "pybind11", "setuptools-scm"]
build-backend = "scikit_build_core.build"

[project]
name = "pymomentum-cpu"
dynamic = ["version"]
description = "A library providing foundational algorithms for human kinematic motion and numerical optimization solvers to apply human motion in various applications (CPU-only version for Linux, macOS Intel, and macOS ARM)"
readme = "README.md"
requires-python = ">=3.12,<3.13"
authors = [
    { name = "Meta Reality Labs Research", email = "jeongseok@meta.com" },
]
license = { text = "MIT" }
keywords = [
    "kinematics",
    "motion",
    "optimization",
    "human-motion",
    "inverse-kinematics",
    "forward-kinematics",
    "body-tracking",
    "motion-capture",
    "character-animation",
    "robotics",
    "cpu",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    # PyTorch version constraints - platform and Python version specific
    # Linux: Support latest PyTorch with CUDA
    # macOS: Limited to older PyTorch versions (CPU only)
    # CPU package for Linux and macOS ARM64 (Apple Silicon only - Intel Macs not supported)
    # Linux uses latest PyTorch
    "torch>=2.8.0,<2.9; platform_system == 'Linux' and python_version == '3.12'",
    "torch>=2.8.0,<2.9; platform_system == 'Linux' and python_version == '3.13'",
    # macOS ARM64 (Apple Silicon) - PyTorch 2.8+ available
    "torch>=2.8.0,<2.9; platform_system == 'Darwin' and platform_machine == 'arm64' and python_version == '3.12'",
    "torch>=2.8.0,<2.9; platform_system == 'Darwin' and platform_machine == 'arm64' and python_version == '3.13'",
]

[project.urls]
Homepage = "https://github.com/facebookresearch/momentum"
Documentation = "https://facebookresearch.github.io/momentum/"
Repository = "https://github.com/facebookresearch/momentum"
"Bug Tracker" = "https://github.com/facebookresearch/momentum/issues"
Changelog = "https://github.com/facebookresearch/momentum/releases"

[tool.scikit-build]
build-dir = "build/{wheel_tag}"
cmake.args = [
    "-DBUILD_SHARED_LIBS=OFF",
    "-DMOMENTUM_BUILD_PYMOMENTUM=ON",
    "-DMOMENTUM_BUILD_EXAMPLES=OFF",
    "-DMOMENTUM_BUILD_TESTING=OFF",
    "-DMOMENTUM_BUILD_RENDERER=OFF",
    "-DMOMENTUM_ENABLE_SIMD=OFF",
    "-DCMAKE_CXX_SCAN_FOR_MODULES=OFF",
    "-DMOMENTUM_USE_SYSTEM_RERUN_CPP_SDK=ON",
    "-DMOMENTUM_USE_SYSTEM_PYBIND11=ON",
]
minimum-version = "0.10"
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
sdist.exclude = [
    ".github/",
    ".pixi/",
    "build/",
    "dist/",
    "*.lock",
]
wheel.exclude = ["geometry_test_helper.*"]

[[tool.scikit-build.overrides]]
if.platform-system = "^darwin"
cmake.args = [
    "-DBUILD_SHARED_LIBS=OFF",
    "-DMOMENTUM_BUILD_PYMOMENTUM=ON",
    "-DMOMENTUM_BUILD_EXAMPLES=OFF",
    "-DMOMENTUM_BUILD_TESTING=OFF",
    "-DMOMENTUM_BUILD_RENDERER=OFF",
    "-DMOMENTUM_ENABLE_SIMD=OFF",
    "-DCMAKE_CXX_SCAN_FOR_MODULES=OFF",
    "-DMOMENTUM_USE_SYSTEM_RERUN_CPP_SDK=ON",
    "-DMOMENTUM_USE_SYSTEM_PYBIND11=ON",
]

[[tool.scikit-build.overrides]]
if.platform-system = "^linux"
cmake.args = [
    "-DBUILD_SHARED_LIBS=OFF",
    "-DMOMENTUM_BUILD_PYMOMENTUM=ON",
    "-DMOMENTUM_BUILD_EXAMPLES=OFF",
    "-DMOMENTUM_BUILD_TESTING=OFF",
    "-DMOMENTUM_BUILD_RENDERER=OFF",
    "-DMOMENTUM_ENABLE_SIMD=OFF",
    "-DCMAKE_CXX_SCAN_FOR_MODULES=OFF",
    "-DMOMENTUM_USE_SYSTEM_RERUN_CPP_SDK=ON",
    "-DMOMENTUM_USE_SYSTEM_PYBIND11=ON",
    "-DCMAKE_C_COMPILER=/tmp/build_env/.pixi/envs/default/bin/x86_64-conda-linux-gnu-gcc",
    "-DCMAKE_CXX_COMPILER=/tmp/build_env/.pixi/envs/default/bin/x86_64-conda-linux-gnu-g++",
]


[[tool.scikit-build.overrides]]
if.platform-system = "^win32"
cmake.args = [
    "-DBUILD_SHARED_LIBS=OFF",
    "-G Visual Studio 17 2022",
    "-DMOMENTUM_BUILD_PYMOMENTUM=ON",
    "-DMOMENTUM_BUILD_EXAMPLES=OFF",
    "-DMOMENTUM_BUILD_TESTING=OFF",
    "-DMOMENTUM_BUILD_RENDERER=OFF",
    "-DMOMENTUM_ENABLE_SIMD=OFF",
    "-DMOMENTUM_USE_SYSTEM_RERUN_CPP_SDK=ON",
    "-DMOMENTUM_USE_SYSTEM_PYBIND11=ON",
    "-DCMAKE_CXX_SCAN_FOR_MODULES=OFF",
]

[tool.setuptools_scm]
# Automatically determine version from git tags
# Tags should follow the pattern: v1.2.3
# Will generate versions like: 1.2.3 (on tag), 1.2.4.post12 (between tags)
version_scheme = "post-release"
local_scheme = "no-local-version"
version_file = "pymomentum/_version.py"

[tool.cibuildwheel]
build-frontend = "pip; args: --no-build-isolation"
build = "cp312-* cp313-*"
skip = "pp* *-musllinux*"
archs = ["auto64"]
manylinux-x86_64-image = "manylinux_2_28"

# Common
before-build = """
VER=$(python -c "import sys; print(f'{sys.version_info.major}{sys.version_info.minor}')")
echo "Using pyproject.toml for Python $VER"
cp pyproject-pypi-cpu-py${VER}.toml pyproject.toml

# Install build dependencies that are not in build-system.requires
# We need torch to link against libtorch
# Use the same constraints as in the generated pyproject.toml
pip install "torch>=2.8.0,<2.9" --index-url https://download.pytorch.org/whl/cpu

# Install build backend dependencies manually since we use --no-build-isolation
pip install scikit-build-core pybind11 setuptools-scm cmake ninja

echo "Checking compilers in pixi env:"
ls -l /tmp/build_env/.pixi/envs/default/bin/x86_64-conda-linux-gnu-gcc
ls -l /tmp/build_env/.pixi/envs/default/bin/x86_64-conda-linux-gnu-g++
echo "CC=$CC"
echo "CXX=$CXX"
"""
test-command = "python {project}/scripts/run_test.py"
test-requires = ["numpy", "scipy"]
before-test = "pip install \"torch>=2.8.0,<2.9\" --index-url https://download.pytorch.org/whl/cpu"

[tool.cibuildwheel.linux]
before-all = """
# Use local pixi binary if available to avoid network issues
if [ -f /project/pixi_bin ]; then
  echo "Using local pixi binary"
  mkdir -p $HOME/.pixi/bin
  cp /project/pixi_bin $HOME/.pixi/bin/pixi
  chmod +x $HOME/.pixi/bin/pixi
else
  echo "Downloading pixi"
  curl -fsSL https://pixi.sh/install.sh | bash
fi
export PATH=$HOME/.pixi/bin:$PATH

# Install dependencies in a separate directory to avoid conflicts with host's .pixi folder
mkdir -p /tmp/build_env
cp {project}/pixi.toml {project}/pixi.lock {project}/README.md {project}/LICENSE /tmp/build_env/
cd /tmp/build_env
pixi install -e default
"""
environment = { PATH = "$HOME/.pixi/bin:$PATH", CMAKE_PREFIX_PATH = "/tmp/build_env/.pixi/envs/default", MOMENTUM_BUILD_WITH_FBXSDK = "OFF", CC = "/tmp/build_env/.pixi/envs/default/bin/x86_64-conda-linux-gnu-gcc", CXX = "/tmp/build_env/.pixi/envs/default/bin/x86_64-conda-linux-gnu-g++" }
repair-wheel-command = "auditwheel repair -w {dest_dir} {wheel} --exclude libtorch_cpu.so --exclude libtorch.so --exclude libc10.so"

[tool.cibuildwheel.macos]
environment = { CMAKE_PREFIX_PATH = "{project}/.pixi/envs/default", MOMENTUM_BUILD_WITH_FBXSDK = "OFF" }

[tool.cibuildwheel.windows]
environment = { CMAKE_PREFIX_PATH = "{project}/.pixi/envs/default", MOMENTUM_BUILD_WITH_FBXSDK = "OFF" }
